@@ -8,13 +8,6 @@ Stuff to mention in GNOME 2.8 release notes:
   - Keyboard Layout shows a preview which highlights keys that you press.
   - gnome-volume-manager config.
  
-
-Improvements to developer platform:
-  - API additions in gnome-vfs.
-  - also wrapped by the platform bindings.
-
-
-system adminstration:
   
 
 DONE (maybe with TODOs in the text:
@@ -47,3 +40,7 @@ DONE (maybe with TODOs in the text:
 system adminstration:
   - gnome-nettool, vino, system tools.
    - searching in gconf-editor, ability to set default and mandatory settings when root, ability to see recently-modified keys.
+
+Improvements to developer platform:
+  - API additions in gnome-vfs.
+  - also wrapped by the platform bindings.
