@@ -55,7 +55,7 @@
     <title>What's New In GNOME &version;</title>
 
     <xi:include href="rndesktop.xml"/>
-<!--    <xi:include href="rncontrolcenter.xml"/> -->
+    <xi:include href="rncontrolcenter.xml"/>
     <xi:include href="rnapplets.xml"/>
     <xi:include href="rnapplications.xml"/>
     <xi:include href="rnsysadmin.xml"/>
